--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   logger: any #for logging purpose
   flutter_riverpod: ^1.0.4
   skeletons: ^0.0.3
+  go_router: ^7.0.1
+  badges: ^2.0.3
 
 dev_dependencies:
   flutter_test:
